[gd_scene load_steps=8 format=3 uid="uid://dmebkus7j77fl"]

[ext_resource type="Script" uid="uid://dvc4cvxoyf372" path="res://Script/Unidad/unidad.gd" id="1_w64r7"]
[ext_resource type="Script" uid="uid://c5g8o7um40762" path="res://Script/Unidad/recursos ataque/opcion_ataque.gd" id="2_jbfm1"]
[ext_resource type="Resource" uid="uid://bjabsba0riubd" path="res://Script/Unidad/recursos ataque/ataque_dragon_1.tres" id="3_cy8yn"]
[ext_resource type="Resource" uid="uid://ch8csri2tt4up" path="res://Script/Unidad/recursos ataque/ataque_dragon_2.tres" id="4_cy8yn"]
[ext_resource type="Script" uid="uid://ccys5pti63ga4" path="res://Script/Unidad/recursos defensa/estadisticas_defensa.gd" id="5_o2ghx"]
[ext_resource type="Resource" uid="uid://c607epioylg4d" path="res://Script/Unidad/recursos defensa/defensa_dragoncito.tres" id="6_14lmo"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_w64r7"]
points = PackedVector2Array(36, 0, 18, 36, -18, 36, -36, 0, -18, -36, 18, -36)

[node name="Unidad" type="Node2D"]
script = ExtResource("1_w64r7")
sprite_unidad_UID = "uid://bksfnvk2kclfb"

[node name="EstadisticasAtaque" type="Node" parent="."]

[node name="OpcionAtaque" type="Node" parent="EstadisticasAtaque"]
script = ExtResource("2_jbfm1")
opcion_ataque_res = ExtResource("3_cy8yn")
metadata/_custom_type_script = "uid://c5g8o7um40762"

[node name="OpcionAtaque2" type="Node" parent="EstadisticasAtaque"]
script = ExtResource("2_jbfm1")
opcion_ataque_res = ExtResource("4_cy8yn")
metadata/_custom_type_script = "uid://c5g8o7um40762"

[node name="estadisticas_defensa" type="Node" parent="."]
script = ExtResource("5_o2ghx")
informacion_defensa = ExtResource("6_14lmo")
metadata/_custom_type_script = "uid://ccys5pti63ga4"

[node name="sprite" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("ConvexPolygonShape2D_w64r7")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
